@startuml

enum SeatType {
  STANDARD
  VIP
}

enum BookingStatus {
  RESERVED
  PAID
  CANCELLED
}

entity Movie {
  *movie_id : UUID
  --
  title : string
  age_limit : int
  duration_min : int
  release_year : int
  description: string
}

entity Genre {
  *genre_id : UUID
  --
  name : string
}

entity MovieGenre {
  *movie_id : UUID
  *genre_id : UUID
}

entity CinemaHall {
  *cinema_hall_id : UUID
  --
  hall_number : int
  capacity : int
}

entity Seat {
  *seat_id : UUID
  --
  row : int
  number : int
  seatType : SeatType
}

entity Showtime {
  *showtime_id : UUID
  --
  show_date : date
  show_time : time
}


entity Customer {
  *customer_id : UUID
  --
  first_name : string
  last_name : string
  email : string
  phone : string
}

entity Booking {
  *booking_id : UUID
  --
  total_price: int
  status : BookingStatus
  booking_date: datetime
}

entity BookingSeat {
  *showtime_id : UUID
  *seat_id : UUID
  --
  price : int
}

SeatType <.. Seat : uses
BookingStatus <.. Booking : uses

MovieGenre "1..*" o-- "1" Movie : has_genre 
MovieGenre "1..*" o-- "1" Genre : classified_as
 
Showtime "0..*" o-- "1" Movie : is_shown_in

CinemaHall "1" *-- "1..*" Seat : contains
CinemaHall "1" *-- "0..*" Showtime : hosts 

Seat "1" *-- "0..*" BookingSeat : reserved_as
Booking "1" *-- "1..*" BookingSeat : includes

Booking "0..*" o-- "1" Showtime : has_booking
BookingSeat "0..*" o-- "1" Showtime : has_reserved_seats

Booking "0..*" o-- "1" Customer : makes
@enduml